frontend/test/should_pass/exectype_AssignSetmapSizeToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec({i=y.size()});
	}
}