frontend/test/should_fail/exectype_AssignConstToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(y:string=3);
	}
}